# winter_school_riscv_2026

.github/workflows/: ci.yaml
src/: CMakeLists.txt  all_kmeans.h  kmeans_unchar16.cpp  kmeans_unchar32.cpp  student1_kmeans.cpp
tests/: CMakeLists.txt  kmeans_unchar16d_tests.cpp  new_kmeans_uchar32d_tests.cpp
